--- a/styles/app.css
+++ b/styles/app.css
@@ -1,14 +1,17 @@
-.card {
-  float: left;
-  border: solid 1px black;
-  width: 100px;
-  border-radius: 5px;
-  height: 140px;
-  margin-right: 20px;
+body {
+  background-color: green;
+  color: white;
+  font-family: sans-serif;
 }
 
-.covered {
-  background-color: black;
+.card {
+  float: left;
+  /*border: solid 1px black;*/
+  width: 120px;
+  border-radius: 5px;
+  height: 167px;
+  margin-right: 10px;
+  background-color: white;
 }
 
 .hand {
